--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/reports/aniversariantes.jrxml=UTF-8
 encoding//src/reports/beneficio.jrxml=UTF-8
 encoding//src/reports/inscrito.jrxml=UTF-8
