Finalizado geração de todos os relatórios jasper

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/reports/aniversariantes.jrxml=UTF-8
+encoding//src/reports/atividade.jrxml=UTF-8
 encoding//src/reports/beneficio.jrxml=UTF-8
 encoding//src/reports/inscrito.jrxml=UTF-8
